--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,7 @@
 on : push
 jobs :
       first-job:
-          runs-on : windows-latest
-          step :
-               - run : node --version
+           runs-on : ubuntu-latest
+           steps :
+                   - run : node --version
+                   
