--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,4 +4,6 @@ jobs :
            runs-on : ubuntu-latest
            steps :
                    - run : node --version
+                   - run : npm --version
                    
+
