--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,6 @@ jobs :
                    - run : node --version
                    - run : npm --version
                    - uses : actions/checkout@v3
-                   - run : node index.js
+                   - run : npm server
 
 
